Removed unnecessary endpoints /proxy and /ping from Hoster
