# services/facade/openapi.yaml
@@ -1,7 +1,7 @@
 openapi: 3.0.0
 info:
   title: VSB EInk Facade Service API
-  version: 2.1.0
+  version: 3.0.0
   description: An API for managing panels, users, and schedules in the VSB EInk Facade Service.
 
 servers:
@@ -1142,22 +1142,6 @@ paths:
       responses:
         default:
           $ref: '#/components/responses/UnknownResponse'
-
-  /hosted/core/ping:
-    get:
-      operationId: pingHostedCoreExample
-      tags: [hosted]
-      security:
-        - tokenAuth: [HOSTED_READ]
-      responses:
-        '200':
-          description: Ping successful
-          content:
-            text/plain:
-              schema:
-                type: string
-                default: 'pong'
-
   /hosted/core/files/{path}:
     get:
       operationId: getContentMetadata
